<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.loginregister.HomeActivity"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/btn_choose"
        style="@style/Widget.AppCompat.ActionButton.CloseMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="109dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="22dp"
        android:layout_toStartOf="@+id/btn_upload"
        android:text="@string/choose" />

    <Button
        android:id="@+id/btn_upload"
        style="@style/Widget.AppCompat.ActionButton.CloseMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="109dp"
        android:text="@string/upload" />

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/btn_upload"
        android:id="@+id/layout_text"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_name"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/homeusername"
            android:hint="Username"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_email"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/layout_text"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_email"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/homeemail"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/layout_email"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_club"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/homeclub"
            android:hint="Club"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="118dp"
        android:background="@color/yellow"
        android:text="View player"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btnlogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/red"
        android:text="@string/logout"
        android:textColor="@color/white" />

</RelativeLayout>